[package]
name = "cs168_final_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-crypto = "0.2.36"
#rsa = "0.5.0"
rand = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.19"
#crypto = "0.3.0"
rustc-serialize = "0.3.24"
#num-bigint = "0.4.3"
tokio = { version = "1", features = ["full"] }
tokio-js-set-interval = "1.1.0"
futures = "0.3"
async-trait = "0.1.51"
#openssl = "0.10.28"